fix code snippet size on mobile

--- a/themes/hello-friend-ng/assets/scss/_main.scss
+++ b/themes/hello-friend-ng/assets/scss/_main.scss
@@ -13,6 +13,9 @@ html {
 
 pre {
   font: monospace;
+  @media #{$media-size-phone} {
+    font-size: .45rem !important;
+  }
 }
 
 body {
@@ -35,9 +38,6 @@ body {
   @media #{$media-size-phone} {
     font-size: 1rem;
     
-    main {
-      padding: 1rem;
-    }
   }
 
   &.dark-theme {
@@ -240,6 +240,8 @@ ol ol {
 
   @media #{$media-size-phone} {
     margin-top: 0;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 }
 
