--- a/themes/hello-friend-ng/assets/scss/_menu.scss
+++ b/themes/hello-friend-ng/assets/scss/_menu.scss
@@ -2,7 +2,8 @@
   margin-right: 18px;
   z-index: 9999;
   border-left: 1px solid $dark-color;
-  
+  width: 100%;
+
   .dark-theme & {
     background: $dark-background-secondary;
     color: $dark-color;
